sample_gateway.yaml
apiVersion: raven.openyurt.io/v1alpha1
kind: Gateway
metadata:
  labels:
    topology.raven.openyurt.io/region-south: ''
  name: shenzhen
spec:
  backend: libreswan
  endpoints:
    - nodeName: openyurt-e2e-test-worker
      privateIP: 192.168.1.2
      publicIP: 222.1.2.4
    - nodeName: openyurt-e2e-test-worker2
      privateIP: 192.168.1.2
      publicIP: 222.1.2.4
---
apiVersion: raven.openyurt.io/v1alpha1
kind: Gateway
metadata:
  labels:
    topology.raven.openyurt.io/region-south: ''
  name: guangzhou
spec:
  backend: libreswan
  endpoints:
    - nodeName: openyurt-e2e-test-control-plane
      privateIP: 192.168.1.2
      publicIP: 222.1.2.3
